# opengl-tests

./: .gitignore  CMakeLists.txt  README.md
include/: glad.h
src/: glad.c
src/tests/: bufferdata.c  getTexParameter.c  getprogramiv.c  samplecoverage.c  transform.c  vertexAttrib.c
